crates/engine/src/parser/snapshots/engine__parser__oracle__pipeline_snapshot_tests__pipeline_enchantment_with_static_and_replacement.snap
---
source: crates/engine/src/parser/oracle.rs
expression: result
---
{
  "abilities": [],
  "triggers": [],
  "statics": [
    {
      "mode": "Continuous",
      "affected": {
        "type": "Typed",
        "type_filters": [
          "Creature"
        ],
        "controller": "You",
        "properties": []
      },
      "modifications": [
        {
          "type": "AddPower",
          "value": 1
        },
        {
          "type": "AddToughness",
          "value": 1
        }
      ],
      "condition": null,
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "Creatures you control get +1/+1."
    }
  ],
  "replacements": [
    {
      "event": "Destroy",
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "ChangeZone",
          "origin": null,
          "destination": "Exile",
          "target": {
            "type": "SelfRef"
          },
          "owner_library": false,
          "enter_transformed": false,
          "enter_tapped": false,
          "enters_attacking": false
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "mode": {
        "type": "Mandatory"
      },
      "valid_card": {
        "type": "Typed",
        "type_filters": [
          "Creature"
        ],
        "controller": "You",
        "properties": []
      },
      "description": "If a creature you control would die, exile it instead.",
      "condition": null
    }
  ],
  "extractedKeywords": []
}
