crates/engine/src/parser/snapshots/engine__parser__oracle__pipeline_snapshot_tests__pipeline_modal_spell.snap
---
source: crates/engine/src/parser/oracle.rs
expression: result
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "Destroy",
        "target": {
          "type": "Typed",
          "type_filters": [
            "Artifact"
          ],
          "controller": null,
          "properties": []
        },
        "cant_regenerate": false
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": null,
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    },
    {
      "kind": "Spell",
      "effect": {
        "type": "Destroy",
        "target": {
          "type": "Typed",
          "type_filters": [
            "Enchantment"
          ],
          "controller": null,
          "properties": []
        },
        "cant_regenerate": false
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": null,
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": [],
  "modal": {
    "min_choices": 1,
    "max_choices": 1,
    "mode_count": 2,
    "mode_descriptions": [
      "Destroy target artifact.",
      "Destroy target enchantment."
    ],
    "allow_repeat_modes": false,
    "chooser": {
      "type": "Controller"
    }
  }
}
